Add Docker support and fallback for secure code execution
Integrate Docker for isolated code execution, with a fallback to ProcessBuilder if Docker is unavailable, and update configuration and documentation.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: 44914eb3-7e85-4523-a1d3-d4e834ee0905
Replit-Commit-Checkpoint-Type: intermediate_checkpoint
Replit-Commit-Event-Id: 2166e13b-d47d-4117-bb8d-6430f5f8ed2d
Replit-Commit-Screenshot-Url: https://storage.googleapis.com/screenshot-production-us-central1/22c7c630-7f44-4b3c-be88-a42416f1404a/44914eb3-7e85-4523-a1d3-d4e834ee0905/1myaF7a